<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.telnyx.meet.ui.JoinRoomFragment">

    <TextView
        android:id="@+id/join_explainer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:text="@string/join_room_explainer_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_uuid_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_explainer_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/room_uuid_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_room_uuid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participant_name_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_uuid_it">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/participant_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonJoinRoom"
        style="@style/buttonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        android:text="@string/join_room_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participant_name_it" />

    <TextView
        android:id="@+id/see_available_rooms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/see_available_rooms_text"
        android:textColor="@color/telnyx_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJoinRoom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfScreenHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        app:layout_constraintTop_toTopOf="@+id/halfScreenHorizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/halfScreenVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".50" />

        <androidx.camera.view.PreviewView
            android:id="@+id/previewLoginView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/previewPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:src="@drawable/ic_participant_tile_placeholder"/>

        <ImageButton
            android:id="@+id/toggleCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/halfScreenVertical"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"/>
        <ImageButton
            android:id="@+id/toggleAudioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/halfScreenVertical"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>